@@ -96,3 +96,7 @@
 [2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
